@startuml
'https://plantuml.com/class-diagram


class ListEmployeesUI{}

class ListEmployeesController{
+getEmployeeWithWantedRole(role, index)
}

class ListEmployees{
+getEmployeeWithWantedRole(role, index)
}

class Company{
-designation
+getEmployee(index)
+getEmployeesList()
+verifyIfExistsEmployees()
}

abstract class Employee {
-name
-address
-phone number
-e-mail
-citizen card number
}

class Nurse
class Receptionist
class CenterCoordinator
ListEmployeesUI .-> ListEmployeesController
ListEmployeesController .->ListEmployees
ListEmployees .-> "1" Company
Company "1" -> "0..*" Employee : has >
Employee <|-- Nurse
Employee <|- Receptionist
Employee <|-- CenterCoordinator

@enduml